<?xml version="1.0"?>
<package format="2">
  <name>radbot_controller</name>
  <version>0.0.0</version>
  <description>The radbot_controller</description>

  <maintainer email="fmascarich@nevada.unr.edu">frank</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>message_filters</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>eigen_conversions</depend>
  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>gridmap_planner</depend>
  <depend>jsk_rviz_plugins</depend>
  <depend>radbot_serial_interface</depend>
  

</package>
